--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,4 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/gokaysahin/pygye"
+Homepage = "https://github.com/katex35/pygye"
